 FIXME: Adam fixed the Marbles startup in r35324, but now it's again broken!!

2009-02-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-dialog.c (hd_dialog_init): Support undecorated dialogs by
	not adding decor geometry to their size. Fixes: NB#101816

2009-02-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h:
	Added hd_render_manager_update_blur_state, which intelligently checks
	if a view should be blurred or not.
	* src/mb/hd-comp-mgr.c
	* src/mb/hd-comp-mgr.h:
	Changes to use hd_render_manager_update_blur_state
	Changes to stop HD_COMP_MGR_CLIENT_IS_MAXIMIZED accidentally classing
	the 'crash' dialog as a fullscreen client and blurring it

2009-02-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#100551

	* src/mb/hd-note.h:
	  Added macros for all note types.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Test for specific client types (sysmodal dialog, info note,
	  confirmation) rather than "all except ..." when deciding
	  whether to leave for home from tasw/talu.  The previous test
	  cause us to change state when a new banner was mapped.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_effect):
	  Blur/unblur when a comfirmation/info note is mapped/unmapped.

2009-02-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.20

2009-02-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Set correct xsession script number to 05 as NB#101224 says.

	* debian/rules:

2009-02-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home.c:
	  Fixed broken notify for progress indicator - didn't mark the decor
	  as dirty so it never got redrawn.
	* src/mb/hd-decor-button.c:
	  Removed previous press/release notifies, as now works fine when called
	  from hd-theme
	* src/home/hd-title-bar.c
	* src/home/hd-title-bar.h
	* src/mb/hd-theme.c
	* src/mb/hd-decor.c
	* src/mb/hd-decor.h:
	  Added button paint handler, and make sure buttons and title bars are